k8s/eks/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: microservices-gateway-eks
  namespace: dev
spec:
  selector:
    istio: ingressgateway # Ingress Gateway pod selector in your cluster
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true # Automatic HTTP to HTTPS redirection
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: microservices-tls-cert # Secret TLS in the gateway namespace (eg. istio-system)
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: microservices-virtualservice-eks
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway-eks
  http:
    - name: graphql-route
      match:
        - uri:
            prefix: /graphql
      route:
        - destination:
            host: cosmo-router.dev.svc.cluster.local
            port:
              number: 8080

    - name: frontend-routes
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.dev.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-local-ratelimit
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            stat_prefix: http_local_rate_limiter
            token_bucket:
              max_tokens: 150 # Maximum bucket capacity (average 100 + burst 50)
              tokens_per_fill: 100 # Fill 100 requests per second
              fill_interval: 1s
            filter_enabled:
              runtime_key: local_rate_limit_enabled
              default_value:
                numerator: 100
                denominator: HUNDRED
            filter_enforced:
              runtime_key: local_rate_limit_enforced
              default_value:
                numerator: 100
                denominator: HUNDRED
            response_headers_to_add:
              - append_action: OVERWRITE_IF_EXISTS_OR_ADD
                header:
                  key: x-local-rate-limit
                  value: 'true'
            status:
              code: 429
